--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Notadd 官方文档</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="description" content="Notadd 官方文档，NodeJS版文档，PHP版本文档，先进的模块化开发框架">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.bootcss.com/docsify/4.5.3/themes/vue.css">
 </head>
@@ -23,7 +23,9 @@
       loadNavbar: true,
       loadSidebar: true,
       subMaxLevel: 3
-    }
+    }，EditOnGithubPlugin.create(
+        'https://github.com/docs/blob/master/docs/'
+      )
   </script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
