--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
   <meta charset="UTF-8">
   <title>Notadd 官方文档</title>
@@ -7,6 +7,8 @@
   <meta name="description" content="Notadd 官方文档，NodeJS版文档，PHP版本文档，先进的模块化开发框架">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.bootcss.com/docsify/4.5.3/themes/vue.css">
+  <link rel="stylesheet" href="http://npm.elemecdn.com/gitalk/dist/gitalk.css">
+  <link rel="stylesheet" href="http://npm.elemecdn.com/docsify-copy-code/styles.css">
 </head>
 <body>
   <div id="app"></div>
@@ -17,19 +19,38 @@
   </script>
   <script>
     window.$docsify = {
-      name: '',
-      repo: '',
+      name: 'Notadd',
+      repo: 'notadd/docs',
       coverpage: true,
       loadNavbar: true,
       loadSidebar: true,
-      subMaxLevel: 3
-    }，EditOnGithubPlugin.create(
-        'https://github.com/docs/blob/master/docs/'
-      )
+      subMaxLevel: 3,
+      plugins: [
+        EditOnGithubPlugin.create(
+          'https://github.com/docs/blob/master/docs/'
+        ),
+        window.DocsifyCopyCodePlugin.init()
+      ]
+    }
   </script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
+  <script src="http://npm.elemecdn.com/docsify-edit-on-github@1.0.1/index.js"></script>
+  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script>
+  <script src="http://npm.elemecdn.com/gitalk/dist/gitalk.min.js"></script>
+  <script src="http://npm.elemecdn.com/docsify-copy-code/index.js"></script>
+  <script>
+    const gitalk = new Gitalk({
+      clientID: '4e3814c5629e58b14538',
+      clientSecret: '1939ab571161c6f24dc9769ea6712c05b0461845',
+      repo: 'notadd/docs',
+      owner: 'notadd',
+      admin: ['zuohuadong'],
+      // facebook-like distraction free mode
+      distractionFreeMode: false
+    })
+  </script>
 </body>
 </html>
