--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.1/index.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js/gitalk/dist/gitalk.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script>
   <script>
     const gitalk = new Gitalk({
