--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <script>
     window.$docsify = {
       name: 'Notadd',
-      repo: 'notadd/docs',
+      repo: 'https://github.com/notadd/notadd',
       coverpage: true,
       loadNavbar: true,
       loadSidebar: true,
       subMaxLevel: 3,
       plugins: [
         EditOnGithubPlugin.create(
-          'https://github.com/docs/blob/master/docs/'
+          'https://github.com/notadd/docs/tree/master/'
         ),
         window.DocsifyCopyCodePlugin.init()
       ]
