--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
       navigator.serviceWorker.register('sw.js')
     }
   </script>
+  <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
+  <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
+  <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
+  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.1/index.js"></script>
+  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script>
   <script>
     window.$docsify = {
       name: 'Notadd',
@@ -33,19 +41,11 @@
       ]
     }
   </script>
-  <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
-  <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
-  <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
-  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.1/index.js"></script>
-  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script>
   <script>
     const gitalk = new Gitalk({
       clientID: '4e3814c5629e58b14538',
       clientSecret: '1939ab571161c6f24dc9769ea6712c05b0461845',
-      repo: 'notadd/docs',
+      repo: 'docs',
       owner: 'notadd',
       admin: ['zuohuadong'],
       // facebook-like distraction free mode
