--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       navigator.serviceWorker.register('sw.js')
     }
   </script>
+  <script src="//unpkg.com/babel-standalone@6/babel.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
