--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
       navigator.serviceWorker.register('sw.js')
     }
   </script>
+  <script src="//unpkg.com/babel-standalone@6/babel.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script> -->
+  <script src="https://unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script> -->
   <script>
     window.$docsify = {
       name: 'Notadd',
@@ -33,7 +35,10 @@
       loadSidebar: true,
       subMaxLevel: 3,
       plugins: [
-        window.DocsifyCopyCodePlugin.init()
+        window.EditOnGithubPlugin.create(
+          'https://github.com/notadd/docs/tree/master/'
+        )
+        // window.DocsifyCopyCodePlugin.init()
       ]
     }
   </script>
