--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Notadd 官方文档，NodeJS版文档，PHP版本文档，先进的模块化开发框架">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.bootcss.com/docsify/4.5.3/themes/vue.css">
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-copy-code/styles.css">
 </head>
 <body>
@@ -23,10 +23,10 @@
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-bash.min.js"></script>
   <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-php.min.js"></script>
   <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/search.min.js"></script>
-  <script src="https://unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
-  <!-- <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.1/index.js"></script>
+  <script src="https://cdn.bootcss.com/docsify/4.5.3/plugins/gitalk.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code/index.js"></script>
   <script>
     window.$docsify = {
       name: 'Notadd',
@@ -38,12 +38,12 @@
       plugins: [
         window.EditOnGithubPlugin.create(
           'https://github.com/notadd/docs/tree/master/'
-        )
-        // window.DocsifyCopyCodePlugin.init()
+        ),
+        window.DocsifyCopyCodePlugin.init()
       ]
     }
   </script>
-  <!-- <script>
+  <script>
     const gitalk = new Gitalk({
       clientID: 'b3bb603778b1b3d8a263',
       clientSecret: 'be8d521055dfd9d4860da4de679501d98ad8d625',
@@ -53,7 +53,7 @@
       // facebook-like distraction free mode
       distractionFreeMode: false
     })
-  </script> -->
+  </script>
 
   <script src="https://cdn.bootcss.com/docsify/4.5.3/docsify.min.js"></script>
 
