--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <div id="app"></div>
 </body>
-  <!-- <script>
+  <script>
     if (typeof navigator.serviceWorker !== 'undefined') {
       navigator.serviceWorker.register('sw.js')
     }
-  </script> -->
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-edit-on-github@1.0.1/index.js"></script>
   <script>
     window.$docsify = {
