--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       repo: 'https://github.com/notadd/notadd',
       coverpage: true,
       loadNavbar: true,
+      onlyCover: true,
       loadSidebar: true,
       subMaxLevel: 3,
       plugins: [
